# symphony-cc-test

./: .gitignore  IMPLEMENTATION_PLAN.md  Makefile  PLAN.md  README.md  docker-compose.test.yml  docker-compose.yml
.github/: CODEOWNERS
.github/actions/docker-build-push/: action.yml
.github/workflows/: ci.yml  db-migrate.yml  deploy-production.yml  deploy-staging.yml  infra-plan.yml
backend/: .env.example  Dockerfile  conftest.py  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  deepagents_adapter.py  factory.py  middleware.py  response_formats.py  sandbox.py  skills.py  subagents.py
backend/app/agents/prompts/: __init__.py  coder.py  general.py  researcher.py  writer.py
backend/app/agents/tools/: __init__.py  file_tools.py  knowledge_base.py  web_search.py
backend/app/api/: deps.py
backend/app/api/routes/: assistants.py  auth.py  chat.py  health.py  memory.py  skills.py  threads.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  assistant.py  document.py  file_artifact.py  message.py  skill.py  thread.py  types.py  user.py
backend/app/services/: agent_service.py  assistant_service.py  skill_service.py  sse.py  thread_service.py
backend/db/migrations/: alembic.ini  env.py
backend/db/migrations/versions/: 001_initial_schema.py  002_add_checkpoints.py  003_add_pgvector.py  004_add_users.py  005_add_assistants.py  006_add_file_artifacts.py  007_add_skills.py  008_add_assistant_skills.py  009_add_assistant_user_id.py  010_add_thread_user_id.py
backend/evals/: __init__.py  dataset.py  evaluators.py  run_evals.py  schedule_evals.py
backend/skills/code-review/: SKILL.md
backend/skills/content-writing/: SKILL.md
backend/skills/content-writing/references/: blog-template.md
backend/skills/data-analysis/: SKILL.md
backend/skills/data-analysis/scripts/: summarize_csv.py
backend/skills/debugging/: SKILL.md
backend/skills/editing/: SKILL.md
backend/skills/web-research/: SKILL.md
backend/skills/web-research/references/: REFERENCE.md
backend/skills/web-research/scripts/: extract_citations.py
backend/tests/: conftest.py  test_agents.py  test_approval.py  test_assistants.py  test_auth.py  test_auth_endpoints.py  test_chat.py  test_composite_backend.py  test_config.py  test_deepagents_adapter.py  test_file_tools.py  test_health.py  test_memory.py  test_rate_limiter.py  test_response_format.py  test_sandbox_backend.py  test_seed_assistants.py  test_skills.py  test_specialized_agents.py  test_streaming.py  test_subagents.py  test_summarization.py  test_threads.py  test_user_skills.py  test_web_search.py
frontend/: .env.example  .gitignore  Dockerfile  eslint.config.mjs  jest.config.js  jest.setup.ts  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/__mocks__/: react-markdown.tsx  remark-gfm.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/: ProtectedRoute.tsx  ThemeToggle.tsx  UserMenu.tsx
frontend/components/artifacts/: ArtifactButton.tsx  ArtifactPanel.tsx
frontend/components/chat/: AgentForm.tsx  ApprovalDialog.tsx  AssistantSelector.tsx  ChatInput.tsx  ChatInterface.tsx  CodeExecutionCard.tsx  LoadingIndicator.tsx  MessageBubble.tsx  MessageList.tsx  MessageSkeleton.tsx  SkillForm.tsx  SkillList.tsx  SkillSelector.tsx  StructuredResponseCard.tsx  SubAgentProgress.tsx  ToolCallCard.tsx  ToolCallGroup.tsx  WelcomeScreen.tsx  index.ts
frontend/components/chat/__tests__/: AgentForm.test.tsx  ApprovalDialog.test.tsx  AssistantSelector.test.tsx  ChatInput.test.tsx  ChatInterface.test.tsx  CodeExecutionCard.test.tsx  MessageBubble.test.tsx  MessageList.test.tsx  (+5 more)
frontend/components/memory/: MemoryModal.tsx
frontend/components/sidebar/: ConversationSidebar.tsx  FilesSidebar.tsx  TasksSidebar.tsx  index.ts
frontend/components/ui/: Button.tsx  Dialog.tsx  Input.tsx  ScrollArea.tsx  Spinner.tsx
frontend/lib/: api.ts  artifacts.ts  config.ts  safeStorage.ts  toolLabels.ts  types.ts  useKeyboardShortcuts.ts  utils.ts
frontend/providers/: AuthProvider.tsx  ClientProvider.tsx
infrastructure/scripts/: bootstrap.sh  destroy.sh
(+46 files in other folders)
