[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symphony-backend"
version = "0.1.0"
description = "Symphony backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "deepagents>=0.4,<1",
    "langchain-core>=1.2,<2",
    "langchain-openai>=0.3,<2",
    "psycopg[binary]>=3.1,<4",
    "langsmith>=0.2,<1",
    "alembic>=1.14,<2",
    "redis>=5.0,<6",
    "httpx>=0.27,<1",
    "pgvector>=0.3,<1",
    "python-jose[cryptography]>=3.3,<4",
    "bcrypt>=4.0,<5",
    "pydantic[email]>=2.0,<3",
    "pyyaml>=6.0,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "httpx>=0.27,<1",
    "aiosqlite>=0.20,<1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["UP017"]  # datetime.UTC requires Python 3.11+; runtime may be 3.9/3.10

[tool.ruff.lint.per-file-ignores]
"app/api/**" = ["B008"]  # Allow Depends() in function defaults (standard FastAPI pattern)
"app/models/*.py" = ["UP006", "UP035", "UP045"]  # Allow Optional/Dict/List in ORM model files (py3.9 compat, no __future__ annotations)

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
